文件部分已经与前端正常对接。还增加了log，保存在C:/KnowChain/logs